# TIE-52107-Internet-of-Things-Course-Project

./: Readme.md
Scripts/: fetchData.js  pushData.js
esp32/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
esp32/components/esp32-freqcount/: frequency_count.c
esp32/main/: CMakeLists.txt  app_main.c
