idf_component_register(SRCS "app_main.c"
                    INCLUDE_DIRS "/home/hasan/esp/amalgam/esp32-freqcount-example/components/esp32-freqcount/include"
                    INCLUDE_DIRS "/home/hasan/esp/amalgam/esp32-freqcount-example/components/esp32-freqcount"
                    INCLUDE_DIRS ".")